--- a/src/components/MiniCatalog/MiniCatalog.module.scss
+++ b/src/components/MiniCatalog/MiniCatalog.module.scss
@@ -58,7 +58,7 @@
 
 	&__item {
 		width: 139px;
-		height: 260px;
+        padding: 20px;
 
 		&-image {
 			width: 100%;
@@ -74,13 +74,13 @@
 		}
 
 		&-title {
-			@include typography(Oswald, 300, 18px, 22px, 0%, _);
+			@include typography(Oswald, 400, 12px, 32px, 0%, _);
 			color: $main-text-color;
 		}
 
 		&-price {
 			margin-top: 18px;
-			@include typography(Oswald, 500, 22px, 22px, 0%, _);
+			@include typography(Oswald, 500, 16px, 16px, 0%, _);
 			text-transform: uppercase;
 			color: $main-text-color;
 		}
@@ -110,6 +110,7 @@
 
 @media screen and (min-width: 1200px) {
 	.mini-catalog {
+        padding: 0;
 		&__button-wrap {
 			display: flex;
 		}
@@ -127,6 +128,14 @@
 		&__item {
 			width: 210px;
 			height: 420px;
+
+			&-title {
+				@include typography(Oswald, 300, 18px, 22px, 0%, _);
+			}
+
+			&-price {
+				@include typography(Oswald, 500, 22px, 22px, 0%, _);
+			}
 
 			&:last-child {
 				display: inline-block;
