--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -2,6 +2,7 @@
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
+    outline: 1px solid red;
 }
 @media screen and (min-width: 480px) {
   .container {
