--- a/src/pages/CabinetPage/CreateOrder/CreateNewAcountPage/CreateNewAcount.module.scss
+++ b/src/pages/CabinetPage/CreateOrder/CreateNewAcountPage/CreateNewAcount.module.scss
@@ -1,61 +1,158 @@
 .createMainText{
     color: var(--Gray-1, #828282);
-    text-align: center;
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
-    line-height: 68px; /* 485.714% */
+    line-height: 68px; /* 680% */
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        text-align: center;
+        font-size: 14px;
+
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .createMainTitle{
     color: #000;
     text-align: center;
     font-family: Oswald;
-    font-size: 48px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 68px; /* 141.667% */
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+    font-size: 48px;
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
+
 }
 
 .createMainBox {
-    width: 1454px;
-    height: 845px;
+    width: 300px;
     flex-shrink: 0;
-    border: 1px solid var(--Divider, #C4C4C4);
     background: #FFF;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+
+        border: 1px solid var(--Divider, #C4C4C4);
+        height: 845px;
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        width: 1454px;
+        height: 845px;
+    }
 }
 
 .form{
-    margin-left: 424px;
     width: 606px;
-    // background-color: darkkhaki;
+
+    @media screen and (min-width: 768px) {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media screen and (min-width: 1200px) {
+        
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        margin-left: 424px;
+        
+    }
 }
 
 .createPersonalText{
     color: #000;
     font-family: Oswald;
-    font-size: 24px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 68px; /* 283.333% */
-    padding-top: 103px;
+    line-height: normal;
+    
+    padding-top: 15px;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 24px;
+        padding-top: 103px;
+        line-height: 68px; /* 283.333% */
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .createPersonalTextSec{
      color: #000;
     font-family: Oswald;
-    font-size: 24px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 68px; /* 283.333% */
+    line-height: normal;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 24px;
+        line-height: 68px; /* 283.333% */
+
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .createWrap{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .create__label{
@@ -63,20 +160,45 @@
 
     /* Roboto Regular 16 */
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 20px; /* 125% */
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .create__labelSign{
     color: var(--Gray-1, #828282);
     /* Roboto Regular 14 */
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 20px; /* 142.857% */
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .create__required{
@@ -91,18 +213,41 @@
 }
 
 .createInput{
-    width: 443px;
-    // height: 44px;
+    width: 292px;
     padding-top: 10px;
     padding-bottom: 10px;
     flex-shrink: 0;
     margin-bottom: 15px;
     padding-left: 16px;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 443px;
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .btnWrap{
-    margin-top: 46px;
+    margin-top: 27px;
     // margin-left: 50px;
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 46px;
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .createBtn{
@@ -116,9 +261,23 @@
     letter-spacing: 0.5px;
     text-transform: uppercase;
     background-color: #000;
-    width: 270px;
+    width: 139px;
     height: 50px;
     flex-shrink: 0;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 }
 
 .backBtn{
@@ -134,8 +293,22 @@
     line-height: normal;
     letter-spacing: 0.5px;
     text-transform: uppercase;
-    width: 336px;
+    width: 139px;
     height: 50px;
     // padding: 10px 0;
+
+    @media screen and (min-width: 768px) {
+	
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 336px;
+
+       
+    }
+
+    @media screen and (min-width: 1920px) {
+        
+    }
 
 }
