--- a/src/pages/ArticlePage/ArticlePage.module.scss
+++ b/src/pages/ArticlePage/ArticlePage.module.scss
@@ -1,28 +1,31 @@
+@import "../../sass/utils/variables.scss";
+
 .navigation {
   display: flex;
   justify-content: center;
 
   &__list {
-  display: flex;
-  width: 1242px;
-  height: 50px;
-  justify-content: center;
-  gap: 13px;
+    display: flex;
+    width: 1242px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 13px;
   }
 
   &__item {
-    color: var(--Gray-1, #828282);
-text-align: center;
-font-family: Roboto;
-font-size: 14px;
-font-weight: 400;
+    color: $secondary-text-color;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
   }
 
   &__link {
-    color: var(--Gray-1, #828282);
-text-align: center;
-font-family: Roboto;
-font-size: 14px;
-font-weight: 400;
+    color: $secondary-text-color;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
   }
 }
