--- a/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
+++ b/src/pages/Cabinet/DashboardPage/AddNewAddress/AddNewAddress.module.scss
@@ -28,6 +28,7 @@
         display: none;
 
         @media screen and (min-width:1200px) {
+            display: block;
             font-family: "Oswald",
                 sans-serif;
             font-weight: 400;
