--- a/src/components/CreateOrder/OrderSummaryModal/OrderSummaryModal.module.scss
+++ b/src/components/CreateOrder/OrderSummaryModal/OrderSummaryModal.module.scss
@@ -1,14 +1,32 @@
 @import "../../../sass/utils/variables.scss";
 .order {
+  &__backdrop {
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 998;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__modalWrap {
+    background-color: $bg-color;
+    z-index: 999;
+    border-radius: 8px;
+    padding: 15px;
+  }
   &__wrap {
-    position: relative;
     background-color: $bg-color;
     padding: 15px;
     height: fit-content;
     margin-top: 20px;
     margin: 0 auto;
-    width: 100%;
     padding-top: 0;
+    min-width: 100vw;
+    min-height: 100vh;
   }
   &__title {
     font-weight: 400;
@@ -47,9 +65,9 @@
       }
     }
     .order__item:last-child {
-        p {
-            font-weight: 500;
-        }
+      p {
+        font-weight: 500;
+      }
     }
   }
   &__total-wrap {
@@ -71,9 +89,9 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 13px;
-    border-bottom: 1px solid $divider-color ;
+    border-bottom: 1px solid $divider-color;
     padding-bottom: 4px;
-    font-family: "Roboto", sans-serif;;
+    font-family: "Roboto", sans-serif;
   }
   &__info {
     font-weight: 400;
