--- a/src/components/MiniCatalog/MiniCatalog.module.scss
+++ b/src/components/MiniCatalog/MiniCatalog.module.scss
@@ -2,49 +2,21 @@
 @import "../../sass/utils/mixins.scss";
 
 .mini-catalog {
-	padding-top: 67px;
-
-	&__list-wrap {
+	&__wrap {
 		display: flex;
-		align-items: center;
 		flex-direction: column;
-		width: 100%;
-
-		margin: 0 auto;
-
-		&--popular {
-			margin-top: 79px;
-		}
 	}
 
-	&__top-wrap {
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	&__main-list {
+		display: none;
 	}
 
-	&__title {
+	&__main-title {
 		@include typography(Oswald, 400, 18px, 68px, 0%, _);
 	}
 
-	&__button-wrap {
-		display: none;
-		justify-content: space-between;
-		align-items: center;
-		width: 84px;
-		height: 40px;
-	}
-
-	&__button {
-		width: 40px;
-		height: 40px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: 0;
-		background: transparent;
-		border: 2px solid rgba(255, 255, 255, 0.9);
+	&__aside {
+		border: none;
 	}
 
 	&__list {
@@ -53,12 +25,13 @@
 		align-items: center;
 		flex-wrap: wrap;
 		width: 100%;
-		gap: 20px;
+		column-gap: 14px;
+		row-gap: 18px;
 	}
 
 	&__item {
 		width: 139px;
-        padding: 20px;
+		height: 260px;
 
 		&-image {
 			width: 100%;
@@ -66,60 +39,61 @@
 		}
 
 		&-category {
-			margin-top: 14px;
-
 			@include typography(Oswald, 600, 12px, 22px, 0%, _);
 			text-transform: uppercase;
 			color: $subtitle-text-color;
 		}
 
 		&-title {
-			@include typography(Oswald, 400, 12px, 32px, 0%, _);
+			@include typography(Oswald, 300, 12px, 18px, 0%, _);
 			color: $main-text-color;
 		}
 
 		&-price {
-			margin-top: 18px;
-			@include typography(Oswald, 500, 16px, 16px, 0%, _);
+			@include typography(Oswald, 500, 14px, 100%, 0%, _);
 			text-transform: uppercase;
 			color: $main-text-color;
 		}
+	}
+}
 
-		&:last-child {
-			display: none;
+@media screen and (min-width: 480px) {
+	.mini-catalog {
+		&__wrap {
+			max-width: 320px;
+			margin: 0 auto;
 		}
 	}
 }
 
 @media screen and (min-width: 768px) {
 	.mini-catalog {
-		&__list-wrap {
+		&__wrap {
 			max-width: 598px;
 		}
 
 		&__list {
 			max-width: 100%;
-			flex-wrap: nowrap;
-			justify-content: space-between;
-            gap: 14px;
+			// justify-content: space-between;
+			gap: 14px;
 		}
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.mini-catalog {
-        padding: 0;
+		padding: 0;
 		&__button-wrap {
 			display: flex;
 		}
 
-		&__list-wrap {
+		&__wrap {
+			margin: 0;
 			max-width: 100%;
 		}
 
 		&__list {
-			flex-wrap: nowrap;
-			justify-content: space-between;
+			// justify-content: space-between;
 			gap: 31px;
 		}
 
@@ -128,15 +102,11 @@
 			height: 420px;
 
 			&-title {
-				@include typography(Oswald, 300, 18px, 22px, 0%, _);
+				@include typography(Oswald, 300, 18px, 100%, 0%, _);
 			}
 
 			&-price {
-				@include typography(Oswald, 500, 22px, 22px, 0%, _);
-			}
-
-			&:last-child {
-				display: inline-block;
+				@include typography(Oswald, 500, 22px, 100%, 0%, _);
 			}
 		}
 
@@ -148,17 +118,42 @@
 
 @media screen and (min-width: 1920px) {
 	.mini-catalog {
+		&__wrap {
+			padding: 30px 0;
+			flex-direction: row;
+		}
+
+		&__main-list {
+			display: block;
+		}
+
+		&__main-wrap {
+			width: 394px;
+		}
+
+		&__main-title {
+			@include typography(Oswald, 400, 24px, 68px, 0%, _);
+		}
+
+		&__aside {
+			width: 1484px;
+			padding-left: 30px;
+			border-left: 1px solid $divider-color;
+		}
+
+		&__list-wrap {
+			max-width: 100%;
+		}
+
 		&__list {
-			gap: 31px;
+			flex-wrap: wrap;
+			column-gap: 25px;
+			row-gap: 48px;
 		}
 
 		&__item {
-			width: 353px;
+			width: 344px;
 			height: 548px;
-
-			&:last-child {
-				display: inline-block;
-			}
 		}
 	}
 }
